Use assertj core 3.15.0 and add examples for 3.14.0 and 3.13.0. Use JUnit 5